// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-diagnostics - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Debug and troubleshoot production issues on Azure. Covers Container Apps, Function Apps, and AKS diagnostics using AppLens, Azure Monitor, resource health, and safe triage. WHEN: debug production issues, troubleshoot container apps, troubleshoot function apps, troubleshoot Azure Functions, troubleshoot AKS cluster issues, kubectl cannot connect, kube-system or CoreDNS failures, pod pending, crashloop, node not ready, analyze logs with KQL, fix image pull failures, resolve cold start issues, investigate health probe failures, check resource health, find root cause of errors.",
  "extractedKeywords": [
    "aks",
    "analyze",
    "applens",
    "apps",
    "azure",
    "cannot",
    "cause",
    "check",
    "cli",
    "cluster",
    "cold",
    "connect",
    "container",
    "coredns",
    "covers",
    "crashloop",
    "debug",
    "diagnostic",
    "diagnostics",
    "errors",
    "failures",
    "find",
    "function",
    "functions",
    "health",
    "image",
    "investigate",
    "issues",
    "kube-system",
    "kubectl",
    "kubernetes",
    "logs",
    "mcp",
    "monitor",
    "networking",
    "node",
    "pending",
    "probe",
    "production",
    "pull",
    "ready",
    "resolve",
    "resource",
    "root",
    "safe",
    "start",
    "triage",
    "troubleshoot",
    "using",
    "when",
    "with",
  ],
  "name": "azure-diagnostics",
}
`;

exports[`azure-diagnostics - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "analyze",
  "applens",
  "apps",
  "azure",
  "cannot",
  "cause",
  "check",
  "cli",
  "cluster",
  "cold",
  "connect",
  "container",
  "coredns",
  "covers",
  "crashloop",
  "debug",
  "diagnostic",
  "diagnostics",
  "errors",
  "failures",
  "find",
  "function",
  "functions",
  "health",
  "image",
  "investigate",
  "issues",
  "kube-system",
  "kubectl",
  "kubernetes",
  "logs",
  "mcp",
  "monitor",
  "networking",
  "node",
  "pending",
  "probe",
  "production",
  "pull",
  "ready",
  "resolve",
  "resource",
  "root",
  "safe",
  "start",
  "triage",
  "troubleshoot",
  "using",
  "when",
  "with",
]
`;
